finalize exercise to deploy to Heroku

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>OFC Poker</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <h1>Love Tanya!</h1>
     </body>
 </html>
