--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     </head>
 
     <body>
-        <h1>Love Tanya!</h1>
+        <h1>Чатик блэт!</h1>
+        <ul id="messages"></ul>
+        <form action="">
+            <input id="m" autocomplete="off" /><button>Send</button>
+        </form>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <script>
+            $(function () {
+                const socket = io();
+                $('form').submit(function(e) {
+                    e.preventDefault(); // prevents page reloading
+                    socket.emit('chat message', $('#m').val());
+                    $('#m').val('');
+                    return false;
+                });
+                socket.on('chat message', function(msg){
+                    $('#messages').append($('<li>').text(msg));
+                });
+            });
+        </script>
     </body>
 </html>
