--- a/index.html
+++ b/index.html
@@ -7,24 +7,33 @@
     </head>
 
     <body>
-        <h1>Чатик блэт!</h1>
-        <ul id="messages"></ul>
-        <form action="">
-            <input id="m" autocomplete="off" /><button>Send</button>
-        </form>
+        <h1>Play Poker!</h1>
+        <button id="startGameBtn">Start Game</button>
+        <ul id="player">
+            <li>
+                <button id="dealCardsBtn">Deal Cards</button>
+            </li>
+        </ul>
+        <!--<ul id="player"></ul>-->
+        <!--<ul id="player"></ul>-->
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
             $(function () {
                 const socket = io();
-                $('form').submit(function(e) {
+                $('#startGameBtn').click(function() {
+                    socket.emit('start game');
+                });
+                $('#dealCardsBtn').click(function(e) {
                     e.preventDefault(); // prevents page reloading
-                    socket.emit('chat message', $('#m').val());
-                    $('#m').val('');
+                    socket.emit('deal cards');
                     return false;
                 });
-                socket.on('chat message', function(msg){
-                    $('#messages').append($('<li>').text(msg));
+                socket.on('cards dealt', function(cards){
+                    $('#player').append($('<li>').text(cards[0]));
+                    $('#player').append($('<li>').text(cards[1]));
+                    $('#player').append($('<li>').text(cards[2]));
+                    $('#player').append($('<br>'));
                 });
             });
         </script>
